Fixes #14557: Reset the bottom margin on .form-group:last-child in .navbar-form to prevent extra spacing

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -299,6 +299,10 @@
   .form-group {
     @media (max-width: @grid-float-breakpoint-max) {
       margin-bottom: 5px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 
